--- a/danisite_2/index.html
+++ b/danisite_2/index.html
@@ -57,7 +57,7 @@
 <aside class="aside">
     <h3>Fontes:</h3>
     <div class="aside-links">
-      <a href="https://www.birds.com/"> Brds</a>
+      <a href="https://www.birds.com/"> Birds</a>
       <a href="https://mundoeducacao.uol.com.br/biologia/classe-aves.htm"> MundoEducação</a>
       <a href="https://www.instagram.com/marcelocalopsita/"> MarceloCalopsita</a>
       <a href="https://instagram.com/zezecacatua"> ZezéCacatua</a>
