--- a/danisite_2/especies.html
+++ b/danisite_2/especies.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Espécies</title>
+
     <link rel="stylesheet" href="css/especies.css">
+    <script src="js/javascript.js"></script>
+    <link rel="website icon" type="png" href="img/logo.png">
 </head>
 <body>
 
@@ -210,13 +213,12 @@
     <li><i> <a href="https://pt.wikipedia.org/wiki/Melro-preto"> Melros (Turdus merula)</a></i>: Comum na Europa, Ásia Ocidental e partes do Norte da África. Também introduzidos em outras regiões, como a Nova Zelândia.</li><br>
     <li><i> <a href="https://pt.wikipedia.org/wiki/Curió"> Curiós (Sporophila angolensis)</a></i>: Nativo da América do Sul, especialmente encontrado no Brasil, principalmente na região centro-oeste e sudeste.</li><br>
 </ul>
-
-
-
-
 </aside>
 
-<br><br>
+
+<section class="section">
+  <a href="#top" class="botao-topo"><b>Início</b></a>
+</section>
 
 
 <footer class="footer">
